--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/nestjsMongoCRUDTest
 
 JWT_SECRET="pifkyaksjfkjas_backend"
+
+# PROD
+# mongodb+srv://pickyflats:VNWsGO0ovzbiSRje@devcluster.um7nxtl.mongodb.net/?retryWrites=true&w=majority
