feat: create boilerplate for comment api

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # MONGODB_URI=mongodb://localhost:27017/nestjsMongoCRUDTest
+MONGODB_URI=mongodb+srv://pickyflats:VNWsGO0ovzbiSRje@devcluster.um7nxtl.mongodb.net/?retryWrites=true&w=majority
+
+JWT_SECRET="pifkyaksjfkjas_backend"
+
 # PROD
 MONGODB_URI="mongodb+srv://pickyflats:VNWsGO0ovzbiSRje@devcluster.um7nxtl.mongodb.net/?retryWrites=true&w=majority"
 
-JWT_SECRET="pifkyaksjfkjas_backend"
