--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/nestjsMongoCRUDTest
+# MONGODB_URI=mongodb://localhost:27017/nestjsMongoCRUDTest
+# PROD
+MONGODB_URI="mongodb+srv://pickyflats:VNWsGO0ovzbiSRje@devcluster.um7nxtl.mongodb.net/?retryWrites=true&w=majority"
 
 JWT_SECRET="pifkyaksjfkjas_backend"
-
-# PROD
-# mongodb+srv://pickyflats:VNWsGO0ovzbiSRje@devcluster.um7nxtl.mongodb.net/?retryWrites=true&w=majority
